tools/tests/errors/inline_fn_pack.experr
an inline function cannot be comma-packed here
